<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Package Manager</string>
    <string name="activities">Activities</string>
    <string name="apk_installer_description">An individual APK file</string>
    <string name="apk_path">APK Path</string>
    <string name="app_info">App info</string>
    <string name="apks">APK\'s</string>
    <string name="batch_options">Batch Options</string>
    <string name="batch_list_added">%s is added to the batch list</string>
    <string name="batch_list_clear">Clear list</string>
    <string name="batch_list_disable">Are you sure to disable (if enabled) or enable (if disabled) the following app(s)?</string>
    <string name="batch_list_export">Are you sure to export the following app(s) to device storage?</string>
    <string name="batch_list_remove">Are you sure to remove the following app(s)?</string>
    <string name="batch_list_removed">%s is removed from batch list</string>
    <string name="batch_list_reset">Are you sure to reset the following app(s)?</string>
    <string name="batch_list_summary">The following applications are added to the batch list</string>
    <string name="batch_processing">Batch Processing in Progress</string>
    <string name="batch_processing_finished">Batch Processing Completed</string>
    <string name="batch_processing_initialized">Initializing Batch Process</string>
    <string name="batch_warning">Your batch settings will be removed. Are you sure?</string>
    <string name="billing_client_disconnected">Failed to connect with Google Play Billing client</string>
    <string name="bundle_install_apks">Are you sure to install app bundle \'%s\'?</string>
    <string name="bundle_installer_description">App bundles of \'apkm\', \'apks\', and \'xapk\' format</string>
    <string name="bundle_path">Bundle Path</string>
    <string name="bundles">Bundles</string>
    <string name="cancel">Cancel</string>
    <string name="certificate">Certificate</string>
    <string name="change_logs">Change-logs</string>
    <string name="copyright">Copyright: © %s</string>
    <string name="credits">Credits</string>
    <string name="credits_summary">A list of people who contributed to this project</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="dark_theme_auto">Auto</string>
    <string name="dark_theme_disable">Disable</string>
    <string name="dark_theme_enable">Enable</string>
    <string name="data_dir">Data Directory</string>
    <string name="date_installation">Installation Dates</string>
    <string name="date_installed">First Installed: %s</string>
    <string name="date_updated">Last Updated: %s</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Delete \'%s\'?</string>
    <string name="disable_message">will be %s. Are you sure?</string>
    <string name="disable">Disable</string>
    <string name="disabled">disabled</string>
    <string name="disabling">Disabling %s</string>
    <string name="dismiss">Dismiss</string>
    <string name="documentation">Documentation</string>
    <string name="documentation_summary">Check out detailed documentation to use Package Manager</string>
    <string name="done">Done</string>
    <string name="enable">Enable</string>
    <string name="enabled">enabled</string>
    <string name="enabling">Enabling %s</string>
    <string name="exit_confirmation">Show Confirmation</string>
    <string name="exit_simple">Simply Exit</string>
    <string name="exiting_app">On Exiting App</string>
    <string name="explore">Explore</string>
    <string name="explore_error_status">Failed to explore %s</string>
    <string name="export">Export</string>
    <string name="export_apk_summary">The selected APK is exported into \'%s\'</string>
    <string name="export_bundle_summary">The entire app bundle is exported into %s</string>
    <string name="export_details">Export Details</string>
    <string name="export_details_message">App details are exported as %s</string>
    <string name="export_file_message">is successfully exported into %s</string>
    <string name="export_storage_message">Export %s into device storage?</string>
    <string name="exported_apps">Exported Apps</string>
    <string name="exported_apps_name">Exported APK Name</string>
    <string name="exporting">Exporting %s</string>
    <string name="exporting_bundle">Exporting %s app bundle</string>
    <string name="everything_done">Everything Done</string>
    <string name="failed">Failed</string>
    <string name="fdroid">F-Droid</string>
    <string name="file_permission_request_message">In order to get this feature working on newer Android versions (Android R or newer), it is necessary to grant \"All files access\" permission to Package Manager. Kindly grant the permission manually from the new screen opened after clicking the \"Grant\" button.</string>
    <string name="file_picker_message">Please Note: This feature is too experimental</string>
    <string name="grant">Grant</string>
    <string name="general">General</string>
    <string name="got_it">Got it</string>
    <string name="initializing">Initializing…</string>
    <string name="install">Install</string>
    <string name="install_question">Install \'%s\'?</string>
    <string name="installation_cancel_message">Are you sure to cancel the installation?</string>
    <string name="installation_status_aborted">Installation was cancelled by user</string>
    <string name="installation_status_bad_apks">Invalid APK files selected</string>
    <string name="installation_status_blocked">Installation was blocked</string>
    <string name="installation_status_conflict">Unable to install the app because it conflicts with an already installed app with same package name</string>
    <string name="installation_status_failed">Installation Failed</string>
    <string name="installation_status_incompatible">Application is incompatible with this device</string>
    <string name="installation_status_storage">Not enough storage space to install the app</string>
    <string name="installation_status_success">Installation Completed Successfully</string>
    <string name="installer">Installer</string>
    <string name="installer_clicking">On Clicking Installer</string>
    <string name="installer_file_picker">Launch File Picker</string>
    <string name="installer_instructions">Show Instructions</string>
    <string name="installer_summary">You can select installation file(s) by clicking the plus button at the top of this page. The installer supports the following packages:</string>
    <string name="installing_bundle">Installing App Bundle</string>
    <string name="language">Language</string>
    <string name="language_am" translatable="false">አማርኛ</string>
    <string name="language_cs" translatable="false">čeština</string>
    <string name="language_default">Default</string>
    <string name="language_el" translatable="false">Ελληνικά</string>
    <string name="language_en" translatable="false">English</string>
    <string name="language_es" translatable="false">Español</string>
    <string name="language_fr" translatable="false">français</string>
    <string name="language_de" translatable="false">Deutsche</string>
    <string name="language_hu" translatable="false">Magyar</string>
    <string name="language_ko" translatable="false">한국어</string>
    <string name="language_ml" translatable="false">മലയാളം</string>
    <string name="language_pl" translatable="false">Polski"</string>
    <string name="language_pt" translatable="false">Português</string>
    <string name="language_ru" translatable="false">русский</string>
    <string name="language_tr" translatable="false">Türkçe</string>
    <string name="language_uk" translatable="false">Українська</string>
    <string name="language_vi" translatable="false">Tiếng Việt</string>
    <string name="language_zh" translatable="false">中文（简体）</string>
    <string name="manifest">Manifest</string>
    <string name="more">More</string>
    <string name="more_apps">More from Developer</string>
    <string name="more_apps_summary">Checkout more applications provided by the developer in Google Play</string>
    <string name="name">Name</string>
    <string name="native_lib">Native Library</string>
    <string name="never_show_page">Do not show this again</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="open">Open</string>
    <string name="open_message">You\'re already running this app.</string>
    <string name="open_failed">%s is not designed to run in user space</string>
    <string name="open_failed_export_message">Unable to open %s. Do you want to export it into device storage?</string>
    <string name="operations">Operations</string>
    <string name="operations_access_notification">Allows a system app to access notifications</string>
    <string name="operations_accessibility_service">Required by an Accessibility Service, to ensure that only the system can bind to it</string>
    <string name="operations_audio_notification">Change notification volume</string>
    <string name="operations_boot_completed">Receive a broadcast indicating that the system has finished booting</string>
    <string name="operations_body_sensors">Access data from sensors that the user uses to measure what is happening inside his/her body, such as heart rate</string>
    <string name="operations_call_phone">Allows an application to initiate a phone call without going through the Dialer user interface for the user to confirm the call</string>
    <string name="operations_camera">Required to be able to access the camera device</string>
    <string name="operations_change_wifi">Allows applications to change Wi-Fi connectivity state</string>
    <string name="operations_coarse_location">Allows an app to access approximate location</string>
    <string name="operations_delete_packages">Allows an application to request deleting packages</string>
    <string name="operations_fine_location">Allows an application to access precise location</string>
    <string name="operations_get_accounts">Allows access to the list of accounts in the Accounts Service</string>
    <string name="operations_gps">Allows an application to access the GPS</string>
    <string name="operations_install_packages">Allows an application to install packages</string>
    <string name="operations_mute_microphone">Allows an application to access mute the microphone</string>
    <string name="operations_neighbouring_cells">Allows an application to received Signal Strength and Cell ID location</string>
    <string name="operations_post_notification">Allows an application to post notifications</string>
    <string name="operations_process_outgoing_calls">Allows an application to see the number being dialed during an outgoing call with the option to redirect the call to a different number or abort the call altogether</string>
    <string name="operations_read_calender">Allows an application to read the user\'s calendar data</string>
    <string name="operations_read_call_log">Allows an application to read the user\'s call log</string>
    <string name="operations_read_clipboard">Read contents of the clipboard service</string>
    <string name="operations_read_contacts">Allows an application to read the user\'s contacts data</string>
    <string name="restore">Restore</string>
    <string name="search">Search…</string>
    <string name="split_apk_installer_description">Split APK\'s (multiple APK files with the same package name)</string>
    <string name="start">Start</string>
    <string name="uninstall_adb">Uninstall with ADB</string>
    <string name="uninstalled_apps">Uninstalled Apps</string>
    <string name="welcome_message">Welcome to Package Manager, a simple, yet powerful application to manage your apps.</string>
</resources>