<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_vertical"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp" >

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exported_apps"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="80dp"
            style="@style/AppTheme.Title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="?attr/materialIconButtonFilledTonalStyle"
            android:layout_gravity="center|end"
            app:iconTint="?attr/colorPrimary"
            android:layout_marginStart="85dp"
            android:layout_marginEnd="5dp"
            app:icon="@drawable/ic_add"
            android:gravity="center" />
    </FrameLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/installer_summary"
                android:gravity="start"
                android:textStyle="bold"
                android:padding="10dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp" >

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:tint="?attr/colorPrimary"
                    android:src="@drawable/ic_back"
                    android:background="@null"
                    android:rotation="180" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apk_installer_description"
                    android:layout_marginStart="40dp"
                    android:textStyle="bold|italic"
                    android:gravity="start"
                    android:textSize="17sp"
                    android:padding="10dp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp" >

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:tint="?attr/colorPrimary"
                    android:src="@drawable/ic_back"
                    android:background="@null"
                    android:rotation="180" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/split_apk_installer_description"
                    android:layout_marginStart="40dp"
                    android:textStyle="bold|italic"
                    android:gravity="start"
                    android:textSize="17sp"
                    android:padding="10dp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp" >

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:src="@drawable/ic_back"
                    android:tint="?attr/colorPrimary"
                    android:background="@null"
                    android:rotation="180" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bundle_installer_description"
                    android:layout_marginStart="40dp"
                    android:textStyle="bold|italic"
                    android:gravity="start"
                    android:textSize="17sp"
                    android:padding="10dp" />
            </FrameLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp" >

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/never_show_page"
            android:layout_marginEnd="50dp"
            android:textStyle="bold|italic"
            android:layout_gravity="end"
            android:gravity="end"
            android:textSize="17sp"
            android:padding="10dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/hide_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end" />
    </FrameLayout>
</LinearLayout>