<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp" >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/ic_launcher_round"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:gravity="center" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress"
            android:layout_width="175dp"
            android:layout_height="20dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressTint="?attr/colorPrimary"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:paddingStart="15dp"
            android:paddingEnd="15dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold|italic"
            android:visibility="gone"
            android:gravity="center"
            android:textSize="17sp"
            android:padding="10dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:visibility="gone" >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/documentation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/materialIconButtonFilledTonalStyle"
                android:text="@string/documentation"
                android:layout_marginEnd="10dp"
                app:icon="@drawable/ic_book"
                android:textStyle="bold"
                android:textSize="15sp"
                app:iconPadding="10sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/materialIconButtonFilledTonalStyle"
                android:layout_marginStart="10dp"
                app:icon="@drawable/ic_start"
                android:text="@string/start"
                app:iconGravity="textEnd"
                android:textStyle="bold"
                android:textSize="15sp"
                app:iconPadding="10sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>