<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:gravity="start" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/uninstalled_apps" >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sort_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?attr/materialIconButtonFilledTonalStyle"
                    android:layout_marginEnd="10dp"
                    app:icon="@drawable/ic_sort"
                    android:layout_gravity="end" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/search_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?attr/materialIconButtonFilledTonalStyle"
                    android:layout_marginEnd="10dp"
                    app:icon="@drawable/ic_search"
                    android:layout_gravity="end" />
            </androidx.appcompat.widget.Toolbar>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/search_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete"
                    android:layout_marginStart="5dp"
                    android:imeOptions="actionDone"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:hint="@string/search"
                    android:cursorVisible="true"
                    android:visibility="gone"
                    android:gravity="center"
                    android:padding="10dp"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="gone" />
        </LinearLayout>

        <include layout="@layout/layout_recyclerview" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/restore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="75dp"
        app:cardCornerRadius="15dp"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:gravity="center_vertical"
                android:src="@drawable/ic_select"
                android:background="@null"
                android:clickable="false" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:text="@string/restore"
                android:clickable="false"
                android:textStyle="bold"
                android:textSize="20sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>