<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:gravity="center" >

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uninstall_adb"
        android:layout_marginStart="10dp"
        android:layout_gravity="center"
        style="@style/AppTheme.Title"
        android:padding="5dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeColor="?attr/colorPrimary"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp" >

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/uninstall_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="start"
                    android:padding="10dp" />
            </com.google.android.material.card.MaterialCardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/adb_command"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:textStyle="bold|italic"
                    android:gravity="center_horizontal"
                    android:layout_marginEnd="50sp"
                    android:textSize="16sp"
                    android:padding="10dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/copy_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?attr/materialIconButtonFilledTonalStyle"
                    android:layout_gravity="end|center_vertical"
                    app:icon="@drawable/ic_copy" />
            </FrameLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/uninstall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeColor="?attr/colorPrimary"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                android:visibility="gone" >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/uninstall_updates"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="40dp"
                        android:textStyle="bold"
                        android:gravity="start"
                        android:padding="10dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/uninstall_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?attr/materialIconButtonFilledTonalStyle"
                        android:layout_gravity="end|center_vertical"
                        app:icon="@drawable/ic_delete" />
                </FrameLayout>
            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:paddingVertical="10dp"
                android:gravity="center" >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/documentation"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/documentation"
                    app:icon="@drawable/ic_book"
                    android:alpha="0.75" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/got_it"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_thumbs"
                    android:text="@string/got_it" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>